# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/en/

Version 9.1.0

  - Fix for Bug#36936407, PrepareCall method doesn't work as expected when DB name is involved.

  - WL#16490, OpenID Connect authentication support.

  - Fix for Bug#112790 (Bug#35936477), Statement.getGeneratedKeys() returns unexpected value.

  - Fix for Bug#113509 (Bug#36154975), closeOnCompletion cause no statement reuse and server memory leak.

  - Fix for Bug#109418 (Bug#36043556), batch insert threw an unexpected exception.

  - Fix for Bug#114410 (Bug#36434816), Code performance issue.

  - Fix for Bug#110586 (Bug#35254470), got unexpected result when the data type was set to ZEROFILL.

Version 9.0.0

  - WL#16391, Upgrade 3rd party libraries and tools.

  - Fix for Bug#114800 (Bug#36576596), Wrong code by an old patch.

  - Fix for Bug#114846 (Bug#36574322), Auto-closeable X dev session.
    Thanks to Daniel Kec for his contribution.

  - Fix for Bug#114989 (Bug#36612566), Setting null value in setClientInfo throws an NPE.

  - WL#16376, Set 'caching_sha2_password' as default fallback authentication plugin.

  - WL#16342, Update MySQL error codes mapping.

  - WL#16353, Refresh the list of acceptable TLS ciphers.

  - Fix for Bug#114687 (Bug#36529541), Tests fail after mysql_native_password has been made optional in server.

  - WL#16319, Remove deprecated insensitive terminology based methods.

  - WL#16324, Update static MySQL keywords list.

  - Fix for Bug#110512 (Bug#35223851), Contribution: Replace synchronized with ReentrantLock.
    Thanks to Bart De Neuter and Janick Reynders for their contributions.

  - Fix for Bug#108830 (Bug#34721173), LIMIT clause, setMaxRows and cursor combined returns wrong number or rows.

Version 8.4.0

  - WL#15706, Add OpenTelemetry tracing.

  - WL#16174, Support for VECTOR data type.

  - Fix for Bug#36380711, Tests failing due to removal of deprecated features.
